# vm-backend

./: .gitignore  Dockerfile.api  Dockerfile.worker  README.md  main.py  pyproject.toml  render.yaml  start.sh
alembic/: env.py
alembic/versions/: 6c24896dcd1d_initial_migration.py
app/api/v1/: dashboard.py  privacy_policy.py  webhooks.py
app/core/: celery_app.py  config.py  redis.py  security.py
app/db/: session.py
app/models/: __init__.py  bill.py  enums.py  merchant.py
app/repositories/: bill_repo.py  merchant_repo.py
app/schemas/: webhook.py
app/services/: cloudinary.py  huggingface.py  whatsapp.py
app/worker/: ocr_engine.py  tasks.py
