[project]
name = "vm-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "cloudinary>=1.44.2",
    "fastapi>=0.136.1",
    "granian>=2.7.4",
    "httpx>=0.28.1",
    "huggingface-hub>=1.16.1",
    "opencv-python-headless>=4.13.0.92",
    "orjson>=3.11.9",
    "paddleocr>=3.5.0",
    "paddlepaddle>=3.3.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
